// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for applications 1`] = `
<div
  className="overview-panel"
  data-test="overview__quality-gate-panel"
>
  <div
    className="display-flex-center spacer-bottom"
  >
    <h2
      className="overview-panel-title null-spacer-bottom"
    >
      overview.quality_gate
       
    </h2>
    <HelpTooltip
      className="little-spacer-left"
      overlay={
        <div
          className="big-padded-top big-padded-bottom"
        >
          overview.quality_gate.help
        </div>
      }
    />
  </div>
  <div>
    <div
      className="overview-quality-gate-badge-large failed"
    >
      <h3
        className="big-spacer-bottom huge"
      >
        metric.level.ERROR
      </h3>
      <span
        className="small"
      >
        overview.X_conditions_failed.3
      </span>
    </div>
    <div
      data-test="overview__quality-gate-conditions"
    >
      <Memo(QualityGatePanelSection)
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "APP",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="foo"
        qgStatus={
          {
            "caycStatus": "compliant",
            "failedConditions": [
              {
                "actual": "10",
                "error": "0",
                "level": "ERROR",
                "measure": {
                  "bestValue": true,
                  "leak": "1",
                  "metric": {
                    "id": "coverage",
                    "key": "coverage",
                    "name": "coverage",
                    "type": "PERCENT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "1.0",
                },
                "metric": "foo",
                "op": "GT",
              },
            ],
            "ignoredConditions": false,
            "key": "foo",
            "name": "Foo",
            "status": "ERROR",
          }
        }
      />
      <Memo(QualityGatePanelSection)
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "APP",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="foo"
        qgStatus={
          {
            "caycStatus": "compliant",
            "failedConditions": [
              {
                "actual": "10",
                "error": "0",
                "level": "ERROR",
                "measure": {
                  "bestValue": true,
                  "leak": "1",
                  "metric": {
                    "id": "coverage",
                    "key": "coverage",
                    "name": "coverage",
                    "type": "PERCENT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "1.0",
                },
                "metric": "foo",
                "op": "GT",
              },
              {
                "actual": "10",
                "error": "0",
                "level": "ERROR",
                "measure": {
                  "bestValue": true,
                  "leak": "1",
                  "metric": {
                    "id": "new_code_smells",
                    "key": "new_code_smells",
                    "name": "new_code_smells",
                    "type": "PERCENT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "1.0",
                },
                "metric": "new_code_smells",
                "op": "GT",
              },
            ],
            "ignoredConditions": false,
            "key": "foo",
            "name": "Foo",
            "status": "ERROR",
          }
        }
      />
    </div>
  </div>
  <withCurrentUserContext(SonarLintPromotion)
    qgConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "foo",
          "op": "GT",
        },
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "foo",
          "op": "GT",
        },
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "new_code_smells",
              "key": "new_code_smells",
              "name": "new_code_smells",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "new_code_smells",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly for applications 2`] = `
<div
  className="overview-panel"
  data-test="overview__quality-gate-panel"
>
  <div
    className="display-flex-center spacer-bottom"
  >
    <h2
      className="overview-panel-title null-spacer-bottom"
    >
      overview.quality_gate
       
    </h2>
    <HelpTooltip
      className="little-spacer-left"
      overlay={
        <div
          className="big-padded-top big-padded-bottom"
        >
          overview.quality_gate.help
        </div>
      }
    />
  </div>
  <div>
    <div
      className="overview-quality-gate-badge-large failed"
    >
      <h3
        className="big-spacer-bottom huge"
      >
        metric.level.ERROR
      </h3>
      <span
        className="small"
      >
        overview.X_conditions_failed.1
      </span>
    </div>
    <div
      data-test="overview__quality-gate-conditions"
    >
      <Memo(QualityGatePanelSection)
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "APP",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="foo"
        qgStatus={
          {
            "caycStatus": "compliant",
            "failedConditions": [
              {
                "actual": "10",
                "error": "0",
                "level": "ERROR",
                "measure": {
                  "bestValue": true,
                  "leak": "1",
                  "metric": {
                    "id": "coverage",
                    "key": "coverage",
                    "name": "coverage",
                    "type": "PERCENT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "1.0",
                },
                "metric": "foo",
                "op": "GT",
              },
            ],
            "ignoredConditions": false,
            "key": "foo",
            "name": "Foo",
            "status": "ERROR",
          }
        }
      />
      <Memo(QualityGatePanelSection)
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "APP",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="foo"
        qgStatus={
          {
            "caycStatus": "compliant",
            "failedConditions": [],
            "ignoredConditions": false,
            "key": "foo",
            "name": "Foo",
            "status": "OK",
          }
        }
      />
    </div>
  </div>
  <withCurrentUserContext(SonarLintPromotion)
    qgConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "foo",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly for projects 1`] = `
<div
  className="overview-panel"
  data-test="overview__quality-gate-panel"
>
  <div
    className="display-flex-center spacer-bottom"
  >
    <h2
      className="overview-panel-title null-spacer-bottom"
    >
      overview.quality_gate
       
    </h2>
    <HelpTooltip
      className="little-spacer-left"
      overlay={
        <div
          className="big-padded-top big-padded-bottom"
        >
          overview.quality_gate.help
        </div>
      }
    />
  </div>
  <div>
    <div
      className="overview-quality-gate-badge-large failed"
    >
      <h3
        className="big-spacer-bottom huge"
      >
        metric.level.ERROR
      </h3>
      <span
        className="small"
      >
        overview.X_conditions_failed.1
      </span>
    </div>
    <div
      data-test="overview__quality-gate-conditions"
    >
      <Memo(QualityGatePanelSection)
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="foo"
        qgStatus={
          {
            "caycStatus": "compliant",
            "failedConditions": [
              {
                "actual": "10",
                "error": "0",
                "level": "ERROR",
                "measure": {
                  "bestValue": true,
                  "leak": "1",
                  "metric": {
                    "id": "coverage",
                    "key": "coverage",
                    "name": "coverage",
                    "type": "PERCENT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "1.0",
                },
                "metric": "foo",
                "op": "GT",
              },
            ],
            "ignoredConditions": false,
            "key": "foo",
            "name": "Foo",
            "status": "ERROR",
          }
        }
      />
    </div>
  </div>
  <withCurrentUserContext(SonarLintPromotion)
    qgConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "foo",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly for projects 2`] = `
<div
  className="overview-panel"
  data-test="overview__quality-gate-panel"
>
  <div
    className="display-flex-center spacer-bottom"
  >
    <h2
      className="overview-panel-title null-spacer-bottom"
    >
      overview.quality_gate
       
    </h2>
    <HelpTooltip
      className="little-spacer-left"
      overlay={
        <div
          className="big-padded-top big-padded-bottom"
        >
          overview.quality_gate.help
        </div>
      }
    />
  </div>
  <div>
    <div
      className="overview-quality-gate-badge-large success"
    >
      <h3
        className="big-spacer-bottom huge"
      >
        metric.level.OK
      </h3>
      <span
        className="small"
      >
        overview.quality_gate_all_conditions_passed
      </span>
    </div>
  </div>
  <withCurrentUserContext(SonarLintPromotion)
    qgConditions={[]}
  />
</div>
`;

exports[`should render correctly for projects 3`] = `
<div
  className="overview-panel"
  data-test="overview__quality-gate-panel"
>
  <div
    className="display-flex-center spacer-bottom"
  >
    <h2
      className="overview-panel-title null-spacer-bottom"
    >
      overview.quality_gate
       
    </h2>
    <HelpTooltip
      className="little-spacer-left"
      overlay={
        <div
          className="big-padded-top big-padded-bottom"
        >
          overview.quality_gate.help
        </div>
      }
    />
  </div>
  <Alert
    className="big-spacer-bottom"
    display="inline"
    variant="info"
  >
    <span
      className="text-middle"
    >
      overview.quality_gate.ignored_conditions
    </span>
    <HelpTooltip
      className="spacer-left"
      overlay="overview.quality_gate.ignored_conditions.tooltip"
    />
  </Alert>
  <div>
    <div
      className="overview-quality-gate-badge-large failed"
    >
      <h3
        className="big-spacer-bottom huge"
      >
        metric.level.ERROR
      </h3>
      <span
        className="small"
      >
        overview.X_conditions_failed.1
      </span>
    </div>
    <div
      data-test="overview__quality-gate-conditions"
    >
      <Memo(QualityGatePanelSection)
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        key="foo"
        qgStatus={
          {
            "caycStatus": "compliant",
            "failedConditions": [
              {
                "actual": "10",
                "error": "0",
                "level": "ERROR",
                "measure": {
                  "bestValue": true,
                  "leak": "1",
                  "metric": {
                    "id": "coverage",
                    "key": "coverage",
                    "name": "coverage",
                    "type": "PERCENT",
                  },
                  "period": {
                    "bestValue": true,
                    "index": 1,
                    "value": "1.0",
                  },
                  "value": "1.0",
                },
                "metric": "foo",
                "op": "GT",
              },
            ],
            "ignoredConditions": true,
            "key": "foo",
            "name": "Foo",
            "status": "ERROR",
          }
        }
      />
    </div>
  </div>
  <withCurrentUserContext(SonarLintPromotion)
    qgConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "foo",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;
